--- a/src/main/resources/application-instance2.yml
+++ b/src/main/resources/application-instance2.yml
@@ -1,21 +1,19 @@
 server:
-  port: 8761
+  port: 8762
 
 spring:
   application:
     name: discoverysever
-
-  profiles:
-    active:  ${INSTANCE}
 
 eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
     serviceUrl:
-      defaultZone: http://localhost2:8762/eureka/
+      defaultZone: http://localhost:8761/eureka/
   instance:
-    hostname: localhost
+    hostname: localhost2
+
 
 logging:
   level:
